--- a/map.html
+++ b/map.html
@@ -57,6 +57,7 @@
         '1.gpx',
         '2.gpx',
         '3.gpx',
+        '4.gpx',
     ].forEach(
         function (value) {
             omnivore.gpx(
