--- a/map.html
+++ b/map.html
@@ -58,6 +58,7 @@
         '2.gpx',
         '3.gpx',
         '4.gpx',
+        '5.gpx',
     ].forEach(
         function (value) {
             omnivore.gpx(
