--- a/map.html
+++ b/map.html
@@ -59,6 +59,12 @@
         '3.gpx',
         '4.gpx',
         '5.gpx',
+        '6.gpx',
+        '7.gpx',
+        '8.gpx',
+        '9.gpx',
+        '10.gpx',
+        '11.gpx',
     ].forEach(
         function (value) {
             omnivore.gpx(
