--- a/map.html
+++ b/map.html
@@ -65,6 +65,15 @@
         '9.gpx',
         '10.gpx',
         '11.gpx',
+        '12.gpx',
+        '13.gpx',
+        '14.gpx',
+        '15.gpx',
+        '16.gpx',
+        '17.gpx',
+        '18.gpx',
+        '19.gpx',
+        '20.gpx',
     ].forEach(
         function (value) {
             omnivore.gpx(
