--- a/map.html
+++ b/map.html
@@ -74,6 +74,8 @@
         '18.gpx',
         '19.gpx',
         '20.gpx',
+        '21.gpx',
+        '22.gpx',
     ].forEach(
         function (value) {
             omnivore.gpx(
