Rename track dir

--- a/map.html
+++ b/map.html
@@ -47,7 +47,7 @@
             map.fitBounds(runLayer.getBounds());
         });
 
-    var basePath = 'uploads/';
+    var basePath = 'tracks/';
 
     var runLayer = omnivore.gpx('2.gpx', null, customLayer);
 
